# UnicodeIdStart

./: .gitignore  Cargo.toml  DEPENDENTS.md  LICENSE  MAINTENANCE.md  README.md
.github/: dependabot.yml
.github/workflows/: Rust.yml
Source/: lib.rs  tables.rs
benches/: id.rs
diagram/: Cargo.toml
diagram/Source/: main.rs
generate/: Cargo.toml
generate/Source/: main.rs  output.rs  parse.rs  write.rs
