[[bench]]
harness = false
name = "id"

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
fst = "0.4"
rand = { version = "0.9", features = ["small_rng"] }
roaring = "0.10"
ucd-trie = { version = "0.1", default-features = false }
unicode-id = "0.3.5"

[package]
authors = ["David Tolnay <dtolnay@gmail.com>", "Boshen <boshenc@gmail.com>"]
categories = ["development-tools::procedural-macro-helpers", "no-std", "no-std::no-alloc"]
description = "Determine whether characters have the ID_Start or ID_Continue properties according to Unicode Standard Annex #31"
documentation = "https://docs.rs/unicode-id-start"
edition = "2018"
keywords = ["unicode", "id"]
license-file = "LICENSE"
name = "unicode-id-start"
repository = "https://github.com/Boshen/unicode-id-start"
rust-version = "1.85.0"
version = "1.3.1"

[package.metadata]

[package.metadata.docs]

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]
targets = ["x86_64-unknown-linux-gnu"]

[workspace]
members = ["diagram", "generate"]
